force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/ABFL_EBOT_Case_Email__mdt.object-meta.xml
<CustomObject>
    <description>This cmt is used to store criteria and conditions for Ebot autoresponse flow.</description>
    <label>ABFL EBOT Case Email</label>
    <pluralLabel>ABFL EBOT Case Emails</pluralLabel>
</CustomObject>