force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/AUTOCLOSURE_IN_RR__c.field-meta.xml
<CustomField>
    <fullName>AUTOCLOSURE_IN_RR__c</fullName>
    <label>AUTOCLOSURE IN RR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>