force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/AUTORESPONSEFLAG__c.field-meta.xml
<CustomField>
    <fullName>AUTORESPONSEFLAG__c</fullName>
    <label>AUTORESPONSEFLAG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>