force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/CONFIDENCESCORE__c.field-meta.xml
<CustomField>
    <fullName>CONFIDENCESCORE__c</fullName>
    <label>CONFIDENCESCORE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>