force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/ExcludedDomains__c.field-meta.xml
<CustomField>
    <fullName>ExcludedDomains__c</fullName>
    <label>Excluded Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>