force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/ISATTACHMENTFLAG__c.field-meta.xml
<CustomField>
    <fullName>ISATTACHMENTFLAG__c</fullName>
    <label>ISATTACHMENTFLAG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>