force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/ISMULTIPLEINTENT__c.field-meta.xml
<CustomField>
    <fullName>ISMULTIPLEINTENT__c</fullName>
    <label>ISMULTIPLEINTENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>