force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/ISMULTIPLELAN__c.field-meta.xml
<CustomField>
    <fullName>ISMULTIPLELAN__c</fullName>
    <label>ISMULTIPLELAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>