force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/ISPOTENTIALCOMPLAINT__c.field-meta.xml
<CustomField>
    <fullName>ISPOTENTIALCOMPLAINT__c</fullName>
    <label>ISPOTENTIALCOMPLAINT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>