force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/ISREGISTEREDCUSTOMER__c.field-meta.xml
<CustomField>
    <fullName>ISREGISTEREDCUSTOMER__c</fullName>
    <label>ISREGISTEREDCUSTOMER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>