force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/PAYTMINTERACTIONID__c.field-meta.xml
<CustomField>
    <fullName>PAYTMINTERACTIONID__c</fullName>
    <label>PAYTMINTERACTIONID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>