force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/SMT_Receiver_Address__c.field-meta.xml
<CustomField>
    <fullName>SMT_Receiver_Address__c</fullName>
    <label>SMT Receiver Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>