force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/Sub_Type_Text_Lead__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Text_Lead__c</fullName>
    <label>Sub Type Text Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>