force-app/main/default/objects/ABFL_EBOT_Case_Email__mdt/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <label>To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>